Added required Java flag for newer JDK versions
Requires adding
'--add-opens=java.base/java.nio=ALL-UNNAMED'